# ifcb-data-api

./: .gitignore  README.md  classifiers.txt  dependencies.txt  ifcb_api.py  init_py_package.sh  init_pypackagev1.sh  test.txt
ifcb/: README.md  pyproject.toml
ifcb/ifcb/: ansi_colors.json  browser.py  browserV1.py  color.py  datasets.json  ifcb.py  metadata.json  msg.py  test.py
