[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ifcb-test"
version = "0.0.1"
authors = [{ name="Boaz Yoo" },]
description = "Command-line api for accessing data in Imaging FlowCytobot database (WHOI-Plankton)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
    "selenium",
    "colorama"
]

[project.urls]
"Homepage" = "https://github.com/BlazerYoo/ifcb-data-api"
"Bug Tracker" = "https://github.com/BlazerYoo/ifcb-data-api/issues"

[project.scripts]
ifcb = "ifcb.ifcb:main"